--- a/less/modules/callout.less
+++ b/less/modules/callout.less
@@ -39,7 +39,7 @@
 		border-width: 0 0 0 5px;
 		padding-left: calc(@box-padding-horizontal*.75);
 	}
-	&__link {
+	.callout__link {
 	 	cursor: pointer;
 	 	display: block;
 	    padding: @box-padding-vertical @box-padding-horizontal*4.5 @box-padding-vertical @box-padding-horizontal;
