--- a/less/site.less
+++ b/less/site.less
@@ -7,6 +7,7 @@
 //@import "modules/type";
 @import "modules/navigation";
 @import "modules/callout";
+@import "modules/collapse";
 
 // Vendors
 @import "vendor/normalize";
