--- a/less/modules/callout.less
+++ b/less/modules/callout.less
@@ -87,4 +87,5 @@
 	&--warning 		{ .callout( @text-color, #B10B1E, #FCDBDF ) }
 	&--alert 		{ .callout( @text-color, @text-color, #FEF8D4 ) }
 	&--info			{ .callout( @text-color, #0A4B88, #EEF7FF ) }
+    &--example      { .callout( @text-color, @cloud, @gray-6 ) }
 }
