Fixed FontAwesome issues
- Added s to http to solve some browser issues

--- a/css/main.css
+++ b/css/main.css
@@ -4,10 +4,12 @@ html {
     font-family:sans-serif;
     -ms-text-size-adjust:100%;
     -webkit-text-size-adjust:100%
+    font-family: 'Open Sans';
 }
 
 body {
     margin:0
+    font-family: 'Open Sans';
 }
 
 article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary {
