--- a/less/modules/collapse.less
+++ b/less/modules/collapse.less
@@ -28,7 +28,7 @@
 	    }
 		&:after {
 			box-sizing: border-box;
-		    font-family: FontAwesome;
+		    font-family: 'FontAwesome';
 			content: "\f067";
 		    color: @collapse-toggle-color;
 		    padding: 0 @box-padding-horizontal*1.25;
@@ -62,7 +62,7 @@
 		margin-top: 1em !important;
 		&:after {
 			box-sizing: border-box;
-		    font-family: FontAwesome;
+		    font-family: 'FontAwesome';
 		    padding: 0 @box-padding-horizontal*1.25;
 		    height: 100%;
 		    position: absolute;
