Incorporated mobile sticky nav
- Incorporated mobile sticky nav into main less
- Tidied syntax
- Fixed JS bugs
- Renamed option2 > consumer-nav

--- a/libs/modules/colors.less
+++ b/libs/modules/colors.less
@@ -38,6 +38,9 @@
 // Brand colours
 @heritage-blue:         	#004B88;
 @heritage-blue-light:       lighten(#004B88, 30%); // NEEDS TO BE CHECKED
+@heritage-blue-lighter:     lighten(#004B88, 65%); // NEEDS TO BE CHECKED
+@heritage-blue-lightest:	#f2f8ff;
+@heritage-blue-nav:			#dce5f1;
 @heritage-yellow:       	#FCBB69;
 @responsible-purple:    	#57486B;
 @responsible-aqua:      	#90CE9C;
