--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -85,6 +85,9 @@ ol li, ul li {
         color: @white;
     }
 }
+.beta .main-nav {
+    overflow: hidden !important;
+}
 .alpha-badge {
     font-weight:        @font-weight-bolder;
     color:              @cloud;
