Created C5 + included npm-ui
- Added the content for C5 to consumer-nav.html
- Style adjustments for consumer-nav.html
- Integrated npm-ui files into git

--- a/libs/modules/colors.less
+++ b/libs/modules/colors.less
@@ -140,7 +140,7 @@
  * HEADERS
  */
 
-@heading-primary-color:     @brand-primary;
+@heading-primary-color:     @heritage-blue;
 @heading-secondary-color:   @heritage-blue;
-@heading-sub-color:         @text-color;
+@heading-sub-color:         @heritage-blue;
 
