--- a/libs/modules/type.less
+++ b/libs/modules/type.less
@@ -22,14 +22,12 @@ h6 {
 h1 {
     font-size:      @font-size-h1;
     font-weight:    @font-weight-boldest;
-    color:          @heritage-blue;
     margin-top:     @font-size-h1 * 0.75;
     margin-bottom:  @font-size-h1 * 0.4;
 }
 
 h2 {
     font-size:      @font-size-h2;
-    color:          @heritage-blue;
     margin-top:     @font-size-h2 * 0.75;
     margin-bottom:  @font-size-h2 * 0.4;
 }
@@ -38,24 +36,28 @@ h3 {
     font-size:      @font-size-h3;
     margin-top:     @font-size-h3 * 0.75;
     margin-bottom:  @font-size-h3 * 0.4;
+    font-weight:    600 !important;
 }
 
 h4 {
     font-size:      @font-size-h4;
     margin-top:     @font-size-h4 * 0.75;
     margin-bottom:  @font-size-h4 * 0.4;
+    font-weight:    600 !important;
 }
 
 h5 {
     font-size:      @font-size-h5;
     margin-top:     @font-size-h5 * 0.75;
     margin-bottom:  @font-size-h5 * 0.4;
+    font-weight:    600 !important;
 }
 
 h6 {
     font-size:      @font-size-h5;
     margin-top:     @font-size-h5 * 0.75;
     margin-bottom:  @font-size-h5 * 0.4;
+    font-weight:    600 !important;
 }
 
 h1 + h2,
