--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -13,6 +13,18 @@ body {
     font-family:        'Open Sans', sans-serif;
     background-color:   @white;
 }
+
+// Main overrides
+.main-content {
+    //padding: 0 2rem !important;
+
+    max-width: 1024px;
+}
+#main {
+    //padding: 0 2rem 0 4rem;
+}
+// End main overrides
+
 .starter-template {
     padding:            0px;
     text-align:         left;
