--- a/public/css/site.css
+++ b/public/css/site.css
@@ -27,6 +27,9 @@ body {
   font-family: 'Open Sans', sans-serif;
   background-color: #ffffff;
 }
+.main-content {
+  max-width: 1024px;
+}
 .starter-template {
   padding: 0px;
   text-align: left;
@@ -1353,19 +1356,17 @@ h4,
 h5,
 h6 {
   line-height: 1.3;
-  color: #253460;
+  color: #004b88;
   font-weight: 700;
 }
 h1 {
   font-size: 2.3rem;
   font-weight: 800;
-  color: #004b88;
   margin-top: 1.725rem;
   margin-bottom: 0.92rem;
 }
 h2 {
   font-size: 1.8rem;
-  color: #004b88;
   margin-top: 1.35rem;
   margin-bottom: 0.72rem;
 }
@@ -1373,21 +1374,25 @@ h3 {
   font-size: 1.5rem;
   margin-top: 1.125rem;
   margin-bottom: 0.6rem;
+  font-weight: 600 !important;
 }
 h4 {
   font-size: 1.2rem;
   margin-top: 0.9rem;
   margin-bottom: 0.48rem;
+  font-weight: 600 !important;
 }
 h5 {
   font-size: 1rem;
   margin-top: 0.75rem;
   margin-bottom: 0.4rem;
+  font-weight: 600 !important;
 }
 h6 {
   font-size: 1rem;
   margin-top: 0.75rem;
   margin-bottom: 0.4rem;
+  font-weight: 600 !important;
 }
 h1 + h2,
 h2 + h3,
@@ -2755,11 +2760,118 @@ button[type="submit"] {
 button[type="submit"]:hover {
   background-color: #6fc7be;
 }
+section {
+  margin-top: 2rem;
+}
 /**
  * Option 3 variations
  */
 .steps {
   margin: 0.75em 0;
+  padding: 0 1rem 0.75rem 1rem;
+  margin: 0.75rem 0;
+  background-color: #f2f8ff;
+  color: #191926;
+  border: 0px #d5ecff solid;
+  display: block;
+  border-width: 1px;
+  padding-bottom: 0;
+}
+.steps h1,
+.steps h2,
+.steps h3 {
+  color: #191926 !important;
+  font-size: 1.5rem;
+}
+.steps a {
+  border-bottom-color: #d5ecff;
+}
+.steps > *:first-child {
+  padding-top: 0.75rem;
+}
+.steps h1:first-child,
+.steps h2:first-child,
+.steps h3:first-child,
+.steps h4:first-child,
+.steps h5:first-child,
+.steps h6:first-child {
+  margin-top: 0;
+}
+.steps li:first-child {
+  padding-top: 0;
+}
+.steps > *:last-child {
+  margin-bottom: 0 !important;
+}
+.steps .callout__link {
+  cursor: pointer;
+  display: block;
+  padding: 0.75rem 4.5rem 0.75rem 1rem;
+  margin: 0.75rem -1rem -0.75rem -1rem !important;
+  border: none;
+  background-color: #d9e1ff;
+  color: #191926;
+  border-bottom: 1px solid #d5ecff;
+  text-decoration: none !important;
+  position: relative;
+}
+.steps .callout__link:after {
+  box-sizing: border-box;
+  font-family: 'FontAwesome';
+  content: "\f054";
+  color: #191926;
+  background-color: #bfcdff;
+  height: 100%;
+  position: absolute;
+  right: 0;
+  top: 0;
+  line-height: 3em;
+  width: 3em;
+  text-align: center;
+}
+.steps .callout__link:hover {
+  background-color: #bfcdff;
+  color: #191926;
+}
+.steps .callout__link:hover:after {
+  background-color: #8ca4ff;
+}
+.steps .callout__link--anchor:after {
+  content: "\f063";
+}
+.steps .callout__link:last-child {
+  border: none;
+}
+.steps a {
+  cursor: pointer;
+  position: relative;
+  padding: 0.375rem 1rem !important;
+  margin: 0 !important;
+  border: none !important;
+  margin: 0 -1rem !important;
+}
+.steps a:hover {
+  background-color: #d5ecff;
+}
+.steps--ordered a .steps--number {
+  background: #ffffff;
+  color: #191926;
+  font-weight: 700;
+  line-height: 0.5rem;
+  text-align: center;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  margin-top: -0.9375rem !important;
+}
+.steps--ordered a p {
+  display: inline-block;
+  margin: 0 0 0 3rem !important;
 }
 .steps a {
   cursor: pointer;
@@ -2841,26 +2953,6 @@ button[type="submit"]:hover {
 .steps a:hover {
   background-color: #d5ecff;
 }
-.steps a .steps--number {
-  background: #ffffff;
-  color: #191926;
-  font-weight: 700;
-  line-height: 0.5rem;
-  text-align: center;
-  width: 2rem;
-  height: 2rem;
-  border-radius: 50%;
-  -moz-border-radius: 50%;
-  -webkit-border-radius: 50%;
-  display: inline-block;
-  position: absolute;
-  top: 50%;
-  margin-top: -1.125rem !important;
-}
-.steps a p {
-  display: inline-block;
-  margin: 0 0 0 3rem !important;
-}
 /**
  * Steps navigation
  */
@@ -2908,10 +3000,6 @@ button[type="submit"]:hover {
 /**
  * Mobile styles
  */
-section {
-  border-top: 1px solid #dfdfdf;
-  margin-top: 20px;
-}
 .steps--navigation--fixed {
   background: none !important;
 }
